kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studentski-uspehi
  labels:
    app: studentski-uspehi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentski-uspehi
  template:
    metadata:
      labels:
        app: studentski-uspehi
    spec:
      containers:
        - name: studentski-uspehi
          image: studentski-uspehi
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
