kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentski-uspehi
spec:
  selector:
    app: studentski-uspehi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
