kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentski-uspehi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - studentski-uspehi.djnd.si
        - studentski-uspehi.danesjenovdan.si
      secretName: studentski-uspehi-tls
  rules:
    - host: studentski-uspehi.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studentski-uspehi
                port:
                  number: 80
    - host: studentski-uspehi.danesjenovdan.si
      http: *http_paths
